# frost-authenticator

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: tests.yml
scripts/: install_desktop.sh  reset_global.sh  uninstall_desktop.sh
src/frost_authenticator/: __init__.py  app.py  models.py  otpauth.py  qr.py  totp.py  vault.py
tests/: test_gui_signals.py  test_otpauth_vault.py  test_totp.py
