[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frost-authenticator"
version = "0.1.0"
description = "A local encrypted TOTP authenticator for Ubuntu built with PyQt6."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "PyQt6>=6.7,<7",
  "cryptography>=42,<47",
  "opencv-python-headless>=4.9,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
frost-authenticator = "frost_authenticator.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
